# Nonlinear-Optimization

./: .gitignore  README.md
gaussNewton/: CMakeLists.txt  GaussNewtonOptimizer.cpp  GaussNewtonOptimizer.h  gaussNewton.cpp
